--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</ul>
 										<h3 id="content" style="margin-top: -10px;"></h3>
 										<ul>
-										Nessa jornada, pude participar de projetos importantes no período em que trabelhei na Claro Brasil, tais como:
+										Nessa jornada, pude participar de projetos importantes no período em que trabalhei na Claro Brasil, tais como:
 											<ul><ul><li>Olimpíadas Rio 2014</li>
 														<li>Copa do Mundo no Brasil em 2016</li>
 														<li>projetos de Swap de rede</li>
@@ -58,15 +58,15 @@
 										<h3 id="content" style="margin-top: -40px;"></h3>
 									</div>
 									<span class="">
-										<img src="images/mauricio.JPG" alt="" width="500" />
+										<!--<img src="images/mauricio.JPG" alt="" width="500" />-->
 									</span>
 								</section>								
 								<h3 id="content" style="margin-top: -40px;"></h3>
 								<ul>
-									Aualmente trabalho na empresa WeService, onde trabalho como Analista de Projetos atuando com cliente TIM.<br>	 No dia-a-dia, identifiquei algumas oportunidades para colocar em prática os meus conhecimentos adquiridos através de cursos que realizei, desenvolvendo algumas automações em nossas tarefas diárias utilizando Pyhton e VBA.<br></ul>
+									Atualmente trabalho na empresa WeService, onde trabalho como Analista de Projetos atuando com cliente TIM.<br>	 No dia-a-dia, identifiquei algumas oportunidades para colocar em prática os meus conhecimentos adquiridos através de cursos que realizei, desenvolvendo algumas automações em nossas tarefas diárias utilizando Pyhton e VBA.<br></ul>
 									<h3 id="content" style="margin-top: -20px;"></h3>
 									<h4>Um pouco mais sobre mim</h4>
-									<ul>Sou adepto ao autodesenvolvimento, buscando conhecimento em diversas plataformas de ensino, tenho rapidez e facilidade no aprendizado de novas tecnologias, excelente relacionamento interpessoal, possuo conhecimentos em:
+									<ul>Sou adepto ao auto-desenvolvimento, buscando conhecimento em diversas plataformas de ensino, tenho rapidez e facilidade no aprendizado de novas tecnologias, excelente relacionamento interpessoal, possuo conhecimentos em:
 										<ul><ul><li>Python</li>
 											<li>Docker</li>
 											<li>Metologia Ágeis</li>
